--- a/styles/styles.css
+++ b/styles/styles.css
@@ -13,8 +13,9 @@ body {
 }
 
 .app__home {
-  flex: 0.2;
   height: 100vh;
+  display: flex;
+  flex-direction: column;
   background-color: #1e2022;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
@@ -22,6 +23,7 @@ body {
 
 .home__header {
   display: flex;
+  flex: 0.2;
   justify-content: space-between;
   align-items: center;
   margin: auto 20px;
@@ -37,4 +39,36 @@ body {
   font-weight: 700;
   font-size: 18px;
   cursor: pointer;
+}
+
+.home__body {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 150px;
+}
+
+.home__body > h1 {
+  margin: 0;
+  font-size: 65px;
+}
+
+.home__body > div {
+  display: flex;
+  margin-top: 20px;
+}
+
+.home__body > div > button {
+  width: 130px;
+  height: 50px;
+  margin: 5px;
+  background-color: #32e0c4;
+  outline: none;
+  border: none;
+  font-size: 17px;
+  font-weight: 500;
+  cursor: pointer;
+  border-radius: 5px;
 }
