--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10,6 +10,8 @@ body {
   display: flex;
   flex-direction: column;
   color: #f0f5f9;
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 .app__home {
@@ -71,4 +73,9 @@ body {
   font-weight: 500;
   cursor: pointer;
   border-radius: 5px;
+}
+
+.app__portfolio {
+  display: flex;
+  flex-direction: column;
 }
