--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,6 +1,8 @@
 body {
   margin: 0;
   padding: 0;
+  overflow: hidden;
+  overflow-y: scroll;
 }
 
 .app {
@@ -118,4 +120,12 @@ footer {
   align-items: center;
   justify-content: center;
   font-weight: bold;
+}
+
+footer > img {
+  object-fit: contain;
+  height: 20px;
+  margin-right: 10px;
+  opacity: 0.8;
+  cursor: pointer;
 }
