--- a/components/projects.css
+++ b/components/projects.css
@@ -41,40 +41,101 @@
 
 .pf__rowCard > img {
   height: 400px;
+  object-fit: contain;
   width: 100%;
   background-color: #1e2022;
 }
 
 .pf__rowCard > h2 {
   margin: 0;
-  padding-left: 5px;
+  padding-left: 10px;
 }
 
 .pf__rowCard > p {
-  padding-left: 5px;
+  padding-left: 10px;
+  font-size: 18px;
+  height: 50px;
+  overflow-y: scroll;
+}
+
+.pf__rowCard > p::-webkit-scrollbar {
+  background-color: gray;
+  width: 5px;
+}
+
+.pf__rowCard > p::-webkit-scrollbar-thumb {
+  background-color: #1e2022;
+  width: 5px;
 }
 
 .pf__rowCard > div {
-  padding-left: 5px;
   margin-bottom: 20px;
-}
-
-.pf__rowCard > div > button {
-  height: 40px;
-  background-color: #ccc;
-  font-weight: 700;
-  font-size: 16px;
+  width: 200px;
+  display: flex;
   outline: none;
   border: none;
   margin-right: 5px;
-  cursor: pointer;
+  cursor: default;
   border-radius: 3px;
   padding-left: 20px;
   padding-right: 20px;
+  margin-left: 10px;
+  transition: all 200ms;
+  height: 40px;
+  background-color: #ccc;
+  justify-content: center;
+  align-items: center;
+}
+
+.pf__rowCard > div > a {
+  font-weight: 700;
+  font-size: 16px;
+  text-decoration: none;
+  color: black;
   transition: all 200ms;
 }
 
-.pf__rowCard > div > button:hover {
+.pf__rowCard > div:hover {
   transform: scale(1.05);
-  margin-left: 5px;
+}
+
+.pf__rowCard > div > a:hover {
+  text-decoration: underline !important;
+}
+
+@media (max-width: 599px) {
+  .pf__header {
+    width: 100vw;
+  }
+
+  .pf__header > h1 {
+    margin-left: 15px;
+    font-size: 25px;
+  }
+
+  .pf__header > hr {
+    border: 0;
+    height: 3px;
+    width: 90vw;
+    object-fit: contain;
+    background-image: url(../assets/hr_bg.png);
+  }
+
+  .pf__rows {
+    flex-direction: column;
+  }
+  .pf__rowCard {
+    margin: 5px !important;
+    flex: 1;
+    width: 90vw;
+  }
+  .pf__rowCard > img {
+    height: 200px;
+  }
+}
+
+@media (max-width: 769px) and (min-width: 600px) {
+  .pf__rowCard > img {
+    height: 250px;
+  }
 }
