--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3,6 +3,7 @@ body {
   padding: 0;
   overflow: hidden;
   overflow-y: scroll;
+  font-family: "Roboto", sans-serif;
 }
 
 .app {
@@ -12,7 +13,6 @@ body {
   display: flex;
   flex-direction: column;
   color: #f0f5f9;
-  overflow-y: scroll;
   overflow-x: hidden;
 }
 
@@ -128,4 +128,77 @@ footer > img {
   margin-right: 10px;
   opacity: 0.8;
   cursor: pointer;
+  transition: all 200ms;
+}
+
+footer > img:hover {
+  transform: scale(1.07);
+}
+
+@media (max-width: 599px) {
+  .app {
+    width: 100vw;
+    height: 100%;
+  }
+
+  .body {
+    overflow-x: none;
+    width: 100vw;
+  }
+
+  .home__header > h2 {
+    font-size: 15px;
+  }
+
+  .home__header > ul > li > a {
+    font-size: 14px;
+  }
+
+  .home__body {
+    flex: 1;
+    display: flex;
+    width: 100vw;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 150px;
+  }
+
+  .home__body > h1 {
+    font-size: 40px;
+    text-align: center;
+  }
+  .home__body > div {
+    /* display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 300px;
+    height: 200px;
+    padding: inherit 10px; */
+    display: none;
+  }
+
+  .app__contact {
+    flex-direction: column;
+  }
+  .app__contact > div {
+    margin-left: 10px;
+  }
+}
+
+@media (max-width: 769px) and (min-width: 600px) {
+  .home__body {
+    flex: 1;
+    display: flex;
+    width: 100vw;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 150px;
+  }
+
+  .home__body > h1 {
+    width: 100vw;
+    text-align: center;
+  }
 }
