--- a/components/projects.html
+++ b/components/projects.html
@@ -22,36 +22,36 @@
         {
             p1: {
                 info: 'A social media web app to share photos with friends & family.',
-                img: '../assets/instapound.png',
+                img: '../assets//instapound.png',
                 repo: 'https://github.com/iamwendellbalagot/instapound'
             },
             p2: {
                 info: 'A web app for instant messaging and digital distribution platform designed for creating communities.',
-                img: '../assets/disrope.png',
+                img: '../assets//disrope.png',
                 repo: 'https://github.com/iamwendellbalagot/disrope'
             }
         },
         {
             p1: {
                 info: 'This tracker provides the number of cases and deaths from novel coronavirus by country, the trend in case and death counts by country, and a global map of showing which countries have cases and deaths.',
-                img: '../assets/c19-tracker.png',
+                img: '../assets//c19-tracker.png',
                 repo: 'https://github.com/iamwendellbalagot/covid-tracker'
             },
             p2: {
                 info: 'A video communication web app, share your video with teammates and friends.',
-                img: '../assets/meetme.png',
+                img: '../assets//meetme.png',
                 repo: 'https://github.com/iamwendellbalagot/MeetMe-app'
             }
         },
         {
             p1: {
                 info: 'A search engine application built with google search engine API.',
-                img: '../assets/searchh.png',
+                img: '../assets//searchh.png',
                 repo: 'https://github.com/iamwendellbalagot/searchh'
             },
             p2: {
                 info: 'IP Address Lookup web app to display details like location, ISP, and domain name.',
-                img: '../assets/ip-tracker.png',
+                img: '../assets//ip-tracker.png',
                 repo: 'https://github.com/iamwendellbalagot/ip-tracker'
             }
         },
