--- a/components/projects.html
+++ b/components/projects.html
@@ -1,7 +1,7 @@
 <div class="pf">
-    <div class="pf__header">
-        <h1 id='title__project' >PROJECT PORTFOLIO</h1>
-        <hr>
+    <div class="pf__header" id='title__project'>
+        <!-- <h1 id='title__project' >PROJECT PORTFOLIO</h1>
+        <hr> -->
     </div>
     <div id='pf__contents' >
         <!-- Project Contents will render here -->
@@ -13,46 +13,75 @@
     const projectTitles =[
         {p1: 'INSTAPOUND', p2: 'DISROPE'},
         {p1: 'COVID-19 TRACKER', p2: 'MEETME'},
-        {p1: 'SEARCHH', p2: 'IP TRACKER'}
+        {p1: 'SEARCHH', p2: 'MYMOVIELIST'},
+        {p1: 'IP TRACKER', p2: 'WATER HAMMER APP'},
+        {p1: 'SIEVING MACHINE APP', p2: 'PLATE LOAD TEST APP'}
         
         
     ];
+
+    //'https://drive.google.com/uc?export=view&id=1dRHTnbbkq9FfbZB5vjobh9noKz7_9rzB'
 
     const projectOverview = [
         {
             p1: {
                 info: 'A social media web app to share photos with friends & family.',
-                img: '../assets//instapound.png',
+                img: 'https://drive.google.com/uc?export=view&id=1I_5Fkl2dv1s-LTvk-AEcKGyf1bRr7KLx',
                 repo: 'https://github.com/iamwendellbalagot/instapound'
             },
             p2: {
                 info: 'A web app for instant messaging and digital distribution platform designed for creating communities.',
-                img: '../assets//disrope.png',
+                img: 'https://drive.google.com/uc?export=view&id=1dRHTnbbkq9FfbZB5vjobh9noKz7_9rzB',
                 repo: 'https://github.com/iamwendellbalagot/disrope'
             }
         },
         {
             p1: {
                 info: 'This tracker provides the number of cases and deaths from novel coronavirus by country, the trend in case and death counts by country, and a global map of showing which countries have cases and deaths.',
-                img: '../assets//c19-tracker.png',
+                img: 'https://drive.google.com/uc?export=view&id=1EBCnjYqpyfIr57XIrG6VRy_yBtFIBRS3',
                 repo: 'https://github.com/iamwendellbalagot/covid-tracker'
             },
             p2: {
                 info: 'A video communication web app, share your video with teammates and friends.',
-                img: '../assets//meetme.png',
+                img:  'https://drive.google.com/uc?export=view&id=1Esv-990Ay1umStRup5Bf--grSQLksQs3',
                 repo: 'https://github.com/iamwendellbalagot/MeetMe-app'
             }
         },
         {
             p1: {
                 info: 'A search engine application built with google search engine API.',
-                img: '../assets//searchh.png',
+                img: 'https://drive.google.com/uc?export=view&id=1M-M39FlAIeVFtaVz6V_EE4rxwfQRx82r',
                 repo: 'https://github.com/iamwendellbalagot/searchh'
             },
             p2: {
+                info: 'Watch movies & TV shows trailer and save them on your playlist!',
+                img: 'https://drive.google.com/uc?export=view&id=1awERQWclBO8p_rTAtM7JDF2JiyIlAcnk',
+                repo: 'https://github.com/iamwendellbalagot/tmbd-netflix-reactJS'
+            }
+        },
+
+        {
+            p1: {
                 info: 'IP Address Lookup web app to display details like location, ISP, and domain name.',
-                img: '../assets//ip-tracker.png',
+                img: 'https://drive.google.com/uc?export=view&id=17HFTFnIteb4Mkk7tIfRNLZOpG6RaDKiQ',
                 repo: 'https://github.com/iamwendellbalagot/ip-tracker'
+            },
+            p2: {
+                info: 'A Desktop app to study water hammer and pipe surge of fluid flow.',
+                img: 'https://drive.google.com/uc?export=view&id=17-dbB9Mjt1dfoYmwKLuZ8-41xtuy9jC7',
+                repo: 'https://github.com/iamwendellbalagot/water-hammer-app'
+            }
+        },
+        {
+            p1: {
+                info: 'A software to analyze and study the weight of aggregate retained through a number of sieves in different mesh sizes.',
+                img: 'https://drive.google.com/uc?export=view&id=1GAGUZ87T12zj1Kv2tPqSn8ZJeXgupfHm',
+                repo: 'https://github.com/iamwendellbalagot/sieve-machine'
+            },
+            p2: {
+                info: 'The main objective of this app is to fabricate a plate load testing for soil bearing capacity which will be subjected to conventional loading conditions to determine the ultimate bearing capacity of a soil sample.',
+                img: 'https://drive.google.com/uc?export=view&id=19b2aqXvjXbafcK4ZXJDJFi4TgQYuquS7',
+                repo: 'https://github.com/iamwendellbalagot/PlateLoadTest'
             }
         },
     ];
